<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"   
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/selecionar"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"   
        android:paddingLeft="20sp"
        android:keepScreenOn="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />
   
 	 <TableRow
         android:id="@+id/tableRow4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="500dp" >

         <Button
         android:id="@+id/botaoVoltar"
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_marginLeft="65dp"
         android:onClick="botaoVoltar"
         android:text="@string/voltar" />
         
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="400dp"
             android:layout_height="50dp"
             android:layout_marginLeft="250dp"
             android:layout_marginTop="10dp"
             android:contentDescription="@string/imagem"
             android:src="@drawable/logo_unb" />

        
     </TableRow>
    

</LinearLayout>
