<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical" >
	
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"        
        android:keepScreenOn="true"
        android:text="@string/home"
        android:textColor="#ffffff"
        android:textSize="200sp"
        android:textStyle="bold" />
    
    

     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center" >
        

     </TableRow>
     <TableRow
         android:id="@+id/tableRow2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center" >
     </TableRow>
     <!--<TableRow
         android:id="@+id/tableRow3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center" >

         <Button
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/iniciar" />
     </TableRow>-->
     
     <TableRow
         android:id="@+id/tableRow3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="80dp" >

         <Button
             android:id="@+id/btnSeleciona"
             android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="50sp"
             android:text="@string/entrar" />

     </TableRow>
	 <TableRow
         android:id="@+id/tableRow4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp" >

         <Button
         android:id="@+id/btnAjuda"
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_marginLeft="65dp"
         android:text="@string/ajuda" />
         
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="400dp"
             android:layout_height="50dp"
             android:layout_marginLeft="150dp"
             android:layout_marginTop="10dp"
             android:contentDescription="@string/imagem"
             android:src="@drawable/logo_unb" />
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:contentDescription="@string/imagem"
             android:src="@drawable/ic_launcher" />
         <TextView
        	 android:layout_width="wrap_content"
        	 android:layout_height="wrap_content"
        	 android:layout_marginLeft="10dp"   
         	 android:layout_marginTop="10dp"
        	 android:keepScreenOn="true"
        	 android:text="@string/home"
       	     android:textColor="#000"
        	 android:textSize="30sp"
        	 android:textStyle="bold" />

         <Button
         	 android:id="@+id/btnCreditos"
         	 android:layout_width="120dp"
         	 android:layout_height="60dp"
         	 android:layout_marginLeft="150dp"
         	 android:text="@string/creditos" />
     </TableRow>

</LinearLayout>