<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0099cc"
    android:orientation="vertical" >
 
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/licoes"
        android:textSize="30sp"
         android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_margin="10dp" />
 
    <ListView
        android:id="@+id/list"
        android:background="#32A7C6"
        android:layout_width="match_parent"
        android:layout_height="451dp"
        android:divider="#ECECEC"
        android:dividerHeight="1sp"
        android:scrollingCache="true" />

 	<TableRow
 	    android:id="@+id/tableRow5"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_marginTop="80dp" >
        
 	    <ImageButton
         android:id="@+id/botaoVoltar"
         android:layout_width="100dp"
         android:layout_height="60dp"
         android:layout_marginLeft="65dp"
         android:onClick="botaoVoltar"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/imagem"
        android:src="@drawable/ic_menu_back"  />

 	    <ImageView
 	        android:id="@+id/imageView1"
 	        android:layout_width="400dp"
 	        android:layout_height="50dp"
 	        android:layout_marginLeft="200dp"
 	        android:layout_marginTop="20dp"
 	        android:contentDescription="@string/imagem"
 	        android:src="@drawable/logo_unb" />

 	    <ImageView
 	        android:id="@+id/imageView2"
 	        android:layout_width="wrap_content"
 	        android:layout_height="50dp"
 	        android:layout_marginLeft="20dp"
 	        android:layout_marginTop="20dp"
 	        android:contentDescription="@string/imagem"
 	        android:src="@drawable/ic_launcher" />

 	    <TextView
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_marginLeft="10dp"
 	        android:layout_marginTop="20dp"
 	        android:keepScreenOn="true"
 	        android:text="@string/home"
 	        android:textColor="#000"
 	        android:textSize="30sp"
 	        android:textStyle="bold" />
 	</TableRow>

</LinearLayout>